--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,8 @@ heading_anchors: true
 aux_links:
   "Just the Docs on GitHub":
     - "https://github.com/just-the-docs/just-the-docs"
+  "Not Just the Docs":
+  - "https://bucksly.github.io"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
