--- a/_config.yml
+++ b/_config.yml
@@ -105,11 +105,9 @@ heading_anchors: true
 aux_links:
   "Just the Docs on GitHub":
     - "https://github.com/just-the-docs/just-the-docs"
-  "Not Just the Docs":
-  - "https://bucksly.github.io"
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+aux_links_new_tab: true
 
 # Enable or disable the side/mobile menu globally
 # Nav menu can also be selectively enabled or disabled using page variables or the minimal layout
